<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Calculator"
    tools:showIn="@layout/activity_calculator">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Information"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date" />

            <TextView
                android:id="@+id/food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/food"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="62dp" />

            <EditText
                android:id="@+id/breakfast"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:hint="@string/breakfast"
                android:inputType="number"
                android:textSize="20sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical"
                android:hint="@string/lunch"
                android:inputType="number"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dinner"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:gravity="fill_vertical"
                android:hint="@string/dinner"
                android:inputType="number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/exercise"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/exercise"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="62dp" />

            <EditText
                android:id="@+id/gym"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:gravity="fill_vertical"
                android:hint="@string/gym"
                android:inputType="number"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/sport"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:gravity="fill_vertical"
                android:hint="@string/sport"
                android:inputType="number"
                android:textSize="20sp" />

            <Button
                android:id="@+id/calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/calculate" />

            <TextView
                android:id="@+id/totfood"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:gravity="fill_vertical"
                android:text="@string/food"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totexercise"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:gravity="fill_vertical"
                android:text="@string/exercise"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:gravity="fill_vertical"
                android:text="@string/total"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

</ScrollView>